# BuddyParallel

./: .gitignore  README.md
companion/: README.md  pyproject.toml
companion/app/buddy_parallel/: cli.py  main.py
companion/app/buddy_parallel/core/: aggregator.py  companion_runtime.py  device_manager.py  event_mapper.py  hardware_state.py  permission_bridge.py  seasonal_themes.py  session_registry.py
companion/app/buddy_parallel/ingest/: api_server.py  event_schema.py  hook_cli.py  hook_server.py  install_hooks.py
companion/app/buddy_parallel/runtime/: config.py  logging_utils.py  runtime_config.py  state.py
companion/app/buddy_parallel/services/: board_setup.py  embedded_mqtt_helper.py  feishu_bridge.py  feishu_helper.py  hook_templates.py  instance_lock.py  launching.py  (+7 more)
companion/packaging/: buddy_parallel.spec
companion/scripts/: build_windows.ps1  diagnose_mqtt_python.ps1  package_release_zip.ps1  prepare_build_env.ps1  run_companion.py  run_dashboard.py  run_settings.py  smoke_packaged_windows.ps1
companion/tests/: test_aggregator.py  test_board_setup.py  test_build_windows_script.py  test_cli.py  test_companion_runtime.py  test_config.py  test_dashboard_window.py  test_hardware_state.py  test_install_hooks.py  test_instance_lock.py  test_launching.py  test_package_release_zip_script.py  test_packaging.py  test_prepare_build_env_script.py  test_pyinstaller_spec.py  test_serial_transport.py  test_smoke_packaged_script.py  test_startup.py  test_transports.py  test_tray_app.py  test_vscode_bridge.py  test_vscode_vsix_script.py  test_weather_bridge.py
(+31 files in other folders)
