[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buddy-parallel-companion"
version = "0.1.0"
description = "Python-first companion for BuddyParallel"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
  "lark-oapi>=1.5,<2",
  "packaging>=24,<26",
  "paho-mqtt>=1.6,<3",
  "PySocks>=1.7,<2",
  "requests>=2.32,<3",
]

[project.scripts]
buddy-parallel = "buddy_parallel.cli:main"
buddy-parallel-settings = "buddy_parallel.ui.settings_window:main"
buddy-parallel-dashboard = "buddy_parallel.ui.dashboard_window:main"

[project.optional-dependencies]
tray = ["pystray>=0.19", "pillow>=10.0"]
serial = ["pyserial>=3.5"]
ble = ["bleak>=0.22"]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]
